--- a/Venier.IOTHub.WebApp/Pages/Index.cshtml
+++ b/Venier.IOTHub.WebApp/Pages/Index.cshtml
@@ -9,17 +9,15 @@
     <form>
         <div class="form-group">
             <label for="exampleFormControlSelect1">Select device</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
+            <select class="form-control" asp-for="deviceId"
+                <option>device1</option>
+                <option>device2</option>
             </select>
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Message</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" asp-for="message" rows="3"></textarea>
         </div>
+        <button type="submit" class="btn btn-primary" style="float:right;">Send</button>
     </form>
 </div>
