--- a/Venier.IOTHub.WebApp/Pages/Index.cshtml
+++ b/Venier.IOTHub.WebApp/Pages/Index.cshtml
@@ -6,10 +6,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Send message</h1>
-    <form>
+    <form method="post">
         <div class="form-group">
             <label for="exampleFormControlSelect1">Select device</label>
-            <select class="form-control" asp-for="deviceId"
+            <select class="form-control" asp-for="deviceId">
                 <option>device1</option>
                 <option>device2</option>
             </select>
