--- a/Venier.IOTHub.WebApp/Pages/Confirm.cshtml
+++ b/Venier.IOTHub.WebApp/Pages/Confirm.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Confirm";
 }
 
-<h1>Ok!</h1>
-<button type="button" class="btn btn-primary" style="float:right;" asp-page="/Index">Index</button>
+<h1>Your message has been sent.</h1>
+<a asp-page="/Index">If you want to go back and send new message click here!</a>
 
 
