--- a/Venier.IOTHub.WebApp/Pages/error404.cshtml
+++ b/Venier.IOTHub.WebApp/Pages/error404.cshtml
@@ -4,5 +4,6 @@
     ViewData["Title"] = "error404";
 }
 
-<h1>error404</h1>
-<button type="button" class="btn btn-primary" style="float:right;" asp-page="/Index">Index</button>
+<h1>Ops.. something went wrong.</h1>
+<a asp-page="/Index">If you want to go back and send new message click here!</a>
+
